# LatexTranscribe

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  app.py  docker-compose.yaml  docker-entrypoint.sh  download_models.py  helloworld.py  main.py  nginx.conf  pyproject.toml  requirements-gpu  requirements-linux-gpudocker-build.txt  requirements.txt  supervisord.conf
.github/workflows/: docker.yml
configs/: config.yaml
frontend/: .env  .env.development  Dockerfile  Dockerfile.dev  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue
output/: test_results.json
server/: .dockerignore  Dockerfile.cpu  Dockerfile.dev.cpu  Dockerfile.dev.gpu  Dockerfile.gpu  app.py  download_models.py  download_models_test.py  main.py  pyproject.toml  requirements-angrave-osx-m1-play.txt  supervisord.conf  supervisord.dev.conf
server/configs/: app_config.yaml  config.yaml  config.yml  test.yaml  unimernet.yaml
server/src/: image_object.py  pipeline.py  pipeline_task.py  utils.py
server/src/data_utils/: box_merge.py
server/src/task_utils/: handwritten_utils.py
server/src/task_utils/classification/: __init__.py
server/src/task_utils/classification/textnet/: pytorch.py
server/src/task_utils/utils/: preprocessor.py  pytorch.py
server/src/tasks/: formula_detection.py  formula_recognition.py  handwritten_detection.py  layout_detection.py  omniparser.py  table_recognition.py
server/src/tasks/layoutlmv3_util/: layoutlmv3_base_inference.yaml
server/src/util/: modeling_internvl_chat.py
src/: image_object.py  pipeline.py
src/frontend/vue-project/: package-lock.json  package.json
src/frontend/vue-project/src/: App.vue  main.js
src/tasks/: table_recognition.py
